--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,20 +16,20 @@ jobs:
       DOCKER_REGISTRY: ghcr.io
       DOCKER_IMAGE: sunday-games/supernova-server/supernova-server
     steps:
-#      - name: Free Disk Space (Ubuntu)
-#        uses: jlumbroso/free-disk-space@main
-#        with:
-#          tool-cache: false
-#          android: true
-#          dotnet: true
-#          haskell: true
-#          large-packages: true
-#          docker-images: true
-#          swap-storage: true
+      #      - name: Free Disk Space (Ubuntu)
+      #        uses: jlumbroso/free-disk-space@main
+      #        with:
+      #          tool-cache: false
+      #          android: true
+      #          dotnet: true
+      #          haskell: true
+      #          large-packages: true
+      #          docker-images: true
+      #          swap-storage: true
       # Checkout
       - name: Checkout repository
         uses: actions/checkout@v3
-        
+      
       # Cache
       - uses: actions/cache@v3
         with:
@@ -48,19 +48,19 @@ jobs:
           targetPlatform: StandaloneLinux64
           customParameters: -tag ${{ inputs.tag }}
           buildMethod: Editor.Build.BuildLinuxMasterClient
+      - uses: actions/upload-artifact@v3
+        with:
+          name: MasterClient
+          path: Build/Master
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           registry: ${{ env.DOCKER_REGISTRY }}
           username: ${{ env.DOCKER_USERNAME }}
-          password: ${{ env.DOCKER_PASSWORD }}          
+          password: ${{ env.DOCKER_PASSWORD }}
       - name: Build & Push to Docker Hub
         uses: docker/build-push-action@v4
         with:
+          context: .
           push: true
           tags: ${{ inputs.tag }}        
-      # Output
-#      - uses: actions/upload-artifact@v3
-#        with:
-#          name: MasterClient
-#          path: Build/Master
