--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,15 +48,15 @@ jobs:
           targetPlatform: StandaloneLinux64
           customParameters: -tag ${{ inputs.tag }}
           buildMethod: Editor.Build.BuildLinuxMasterClient
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.DOCKER_REGISTRY }}
-          username: ${{ env.DOCKER_USERNAME }}
-          password: ${{ env.DOCKER_PASSWORD }}
-      - name: Build & Push to Docker Hub
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: ${{ inputs.tag }}        
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v2
+#        with:
+#          registry: ${{ env.DOCKER_REGISTRY }}
+#          username: ${{ env.DOCKER_USERNAME }}
+#          password: ${{ env.DOCKER_PASSWORD }}
+#      - name: Build & Push to Docker Hub
+#        uses: docker/build-push-action@v4
+#        with:
+#          context: .
+#          push: true
+#          tags: ${{ inputs.tag }}        
