--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       DOCKER_USERNAME: ${{ github.actor }}
       DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
       DOCKER_REGISTRY: ghcr.io
-      DOCKER_IMAGE: gkonst/laughing-lamp/laughing-lamp
+      DOCKER_IMAGE:   ${{ github.repository }}
     steps:
       #      - name: Free Disk Space (Ubuntu)
       #        uses: jlumbroso/free-disk-space@main
@@ -29,7 +29,14 @@ jobs:
       # Checkout
       - name: Checkout repository
         uses: actions/checkout@v3
-      
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE }}
+          tags: |
+            type=ref,event=branch
+            type=raw,${{ inputs.tag }} 
       # Cache
       - uses: actions/cache@v3
         with:
@@ -48,15 +55,15 @@ jobs:
           targetPlatform: StandaloneLinux64
           customParameters: -tag ${{ inputs.tag }}
           buildMethod: Editor.Build.BuildLinuxMasterClient
-#      - name: Login to Docker Hub
-#        uses: docker/login-action@v2
-#        with:
-#          registry: ${{ env.DOCKER_REGISTRY }}
-#          username: ${{ env.DOCKER_USERNAME }}
-#          password: ${{ env.DOCKER_PASSWORD }}
-#      - name: Build & Push to Docker Hub
-#        uses: docker/build-push-action@v4
-#        with:
-#          context: .
-#          push: true
-#          tags: ${{ inputs.tag }}        
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.DOCKER_REGISTRY }}
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_PASSWORD }}
+      - name: Build & Push to Docker Hub
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}        
