--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       DOCKER_USERNAME: ${{ github.actor }}
       DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
       DOCKER_REGISTRY: ghcr.io
-      DOCKER_IMAGE:   ${{ github.repository }}
+      DOCKER_IMAGE: gkonst/lego-tutorial
     steps:
       #      - name: Free Disk Space (Ubuntu)
       #        uses: jlumbroso/free-disk-space@main
